# pyanpm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE.md  TODO.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/pyanpm-cli/: Cargo.toml
crates/pyanpm-cli/src/: cli.rs  main.rs  output.rs  run.rs
crates/pyanpm-core/: Cargo.toml
crates/pyanpm-core/src/: activity.rs  command.rs  error.rs  lib.rs  operations.rs
crates/pyanpm-core/src/audit/: mod.rs
crates/pyanpm-core/src/cache/: mod.rs
crates/pyanpm-core/src/config/: mod.rs
crates/pyanpm-core/src/install/: mod.rs
crates/pyanpm-core/src/plugin/: mod.rs
crates/pyanpm-core/src/source/: git.rs  mod.rs
scripts/release/: Create-Release-Artifacts.ps1  New-Release-Notes.ps1
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: activity.rs  cache.rs  doctor.rs  mod.rs  plugins.rs  settings.rs
src-tauri/src/preferences/: mod.rs
src/app/: providers.tsx  routes.tsx
src/components/layout/: AppShell.tsx
src/components/ui/: Button.tsx  Panel.tsx  StatusBadge.tsx
src/features/activity/: ActivityPage.tsx
src/features/cache/: CachePage.tsx
src/features/doctor/: DoctorPage.tsx
src/features/overview/: OverviewPage.tsx
src/features/plugins/: AddPluginForm.tsx  PluginsPage.tsx
src/features/settings/: SettingsPage.tsx
src/store/: useDesktopStore.ts
src/test/: plugins-page.test.tsx
src/types/: desktop.ts
src/utils/: desktopApi.ts  mockDesktopApi.ts  nativeDesktop.ts  status.ts
