[workspace]
members = ["crates/pyanpm-cli", "crates/pyanpm-core", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.2"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
fs-err = "3"
hex = "0.4"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
tauri = { version = "=2.10.3", features = [] }
tauri-build = { version = "=2.5.6", features = [] }
tauri-runtime = { version = "=2.10.1" }
tauri-runtime-wry = { version = "=2.10.1" }
