[package]
name = "pyanpm-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
directories.workspace = true
pyanpm-core = { path = "../crates/pyanpm-core" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
toml.workspace = true
