[package]
name = "pyanpm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
fs-err.workspace = true
hex.workspace = true
pathdiff.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
